syntax = "proto3";

message SimpleMessage {
  string id = 1;
  int32 value = 2;
}